// Copyright (c) 2020 The Open-Transactions developers
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

syntax = "proto2";

package opentxs.proto;
option java_package = "org.opentransactions.proto";
option java_outer_classname = "OTSendPayment";
option optimize_for = LITE_RUNTIME;

import public "RPCEnums.proto";

message SendPayment {
    optional uint32 version = 1;
    optional RPCPaymentType type = 2;		// see RPCEnums.proto
    optional string contact = 3;			// contact id
    optional string sourceaccount = 4;		// source account id
    optional string destinationaccount = 5;	// destination account id
    optional string memo = 6;
    optional uint64 amount = 7;
    optional string amount_mp = 8;
}
